--- a/network-usage-monitoring/Cargo.toml
+++ b/network-usage-monitoring/Cargo.toml
@@ -14,13 +14,7 @@ aya-log = { workspace = true }
 env_logger = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
-tokio = { workspace = true, features = [
-    "macros",
-    "rt",
-    "rt-multi-thread",
-    "net",
-    "signal",
-] }
+tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
 clap = { workspace = true, features = ["derive"] }
 [build-dependencies]
 anyhow = { workspace = true }
