--- a/network-usage-monitoring/Cargo.toml
+++ b/network-usage-monitoring/Cargo.toml
@@ -16,6 +16,8 @@ libc = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
 clap = { workspace = true, features = ["derive"] }
+ratatui = "0.29.0"
+crossterm = "0.29.0"
 [build-dependencies]
 anyhow = { workspace = true }
 aya-build = { workspace = true }
